# tauri-repro-handler-compilation-issue

./: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: foo.json
src-tauri/src/: commands.rs  fast.rs  slow.rs
src-tauri/src/commands/: slop1.rs  slop2.rs
